--- a/Prajakta.html
+++ b/Prajakta.html
@@ -1,90 +1,68 @@
-DESHPANDE PRAJAKTA PANDURANG
-Contact : 8698039473
-Linkedin : linkedin.com/in/prajakta-deshpande-37a704157
-Email : deshpandepraju10@gmail.com
+DESHPANDE PRAJAKTA PANDURANG<br>
+Contact : 8698039473<br>
+Linkedin : linkedin.com/in/prajakta-deshpande-37a704157<br>
+Email : deshpandepraju10@gmail.com<br>
 
 
-CAREER OBJECTIVE :
-Looking for a responsible position in an organization offering long-term career opportunity where I can utilize my knowledge and skills for the companyís progress and my own development.
+CAREER OBJECTIVE :<br>
+Looking for a responsible position in an organization offering long-term career opportunity where I can utilize my knowledge and skills for the company‚Äôs progress and my own development.<br>
 
 
-EDUCATIONAL QUALIFICATION :
+EDUCATIONAL QUALIFICATION :<br>
 
-Year of passing
+Year of passing : 2019<br>
 Examination
-Board/University
-Institution
-Marks
-2019
-B.E(CSE)
-Solapur University
-Walchand Institute of Technology,
-Solapur
-Pursuing
-2018
-T.E(CSE)
-77.24%
-2017
-S.E(CSE)
-77.56%
-2016
-F.E(CSE)
-79.29%
-2015
-H.S.C
-Maharashtra State Board,Pune
-A.D.Joshi Jr.College,
-Solapur
-74.31%
-2013
-S.S.C
-Maharashtra State Board,Pune
-Bharati Vidyapeeth Solapur
-93%
-Aggregate:78.03%
+Board/University : Solapur University<br>
+Institution : Walchand Institute of Technology<br>
+Marks<br>
+2018 : T.E(CSE) : 77.24%<br>
+2017 : S.E(CSE) : 77.56%<br>
+2016 : F.E(CSE) : 79.29%<br>
+2015 : H.S.C  :74%<br>
+Aggregate:78.03%<br>
 
 
 
- TECHNICAL SKILLS :
-Programming Languages Known : 
- C  (Mid)
-C++ (Mid)
-Core JAVA (Mid) 
-Python(Basic)
-Database : SQL,MySQL
+ TECHNICAL SKILLS :<br>
+Programming Languages Known : <br>
+ C  (Mid)<br>
+C++ (Mid)<br>
+Core JAVA (Mid) <br>
+Python(Basic)<br>
+Database : SQL,MySQL<br>
 
 
 
 
 
-PROJECT :
-1.Library Management System :
-Library Management System is a computerized system which helps user to manage the daily activities of  library in electronic format.This project manages and stores books information according to need it helps both student and librarian to keep a constant track of all the books available in the library.
+PROJECT :<br>
+1.Library Management System :<br>
+Library Management System is a computerized system which helps user to manage the daily activities of  library in electronic format.This project manages and stores books information according to need it helps both student and librarian to keep a constant track of all the books available in the library.<br>
 
-2. IntelREF(Smart Refrigerator Kit) :
-ìIntelligent Refrigerator Kit-IntelREFî is to develop user friendly smart refrigerator   giving     information about the content present in refrigerator remotely and it also allows to set reminder about product refill and get notification of nearby stores according to userís current location to purchase product.
-
-
-
-CERTIFICATION :
-  NPTEL Online Certification in ëOperating Systemí
- NPTEL Online Certification in ëDatabase Management Systemí
- NPTEL Online Certification in ëProgramming in C++í
+2. IntelREF(Smart Refrigerator Kit) :<br>
+‚ÄúIntelligent Refrigerator Kit-IntelREF‚Äù is to develop user friendly smart refrigerator   giving     information about the content present in refrigerator remotely and it also allows to set reminder about product refill and get notification of nearby stores according to user‚Äôs current location to purchase product.<br>
 
 
-CO-CURRICULAR  & EXTRA CURRICULAR ACTIVITIES :
-Member of CSI Communications
-Actively participated in Code marathon(cool-code) event at WITchar17
-Actively participated in Graphity event at WITchar-17
-Actively participated in Web Imagika event at WITchar-18
-Actively participated in treasure hunt competition by ISTE in 2016 and 2017
+
+CERTIFICATION :<br>
+  NPTEL Online Certification in ‚ÄòOperating System‚Äô<br>
+ NPTEL Online Certification in ‚ÄòDatabase Management System‚Äô<br>
+ NPTEL Online Certification in ‚ÄòProgramming in C++‚Äô<br>
 
 
-PERSONAL INFORMATION:
-Date of Birth             :10th FEB 1997
-Languages Known    : English, Hindi, Marathi, Kannada
-Nationality                 : Indian
-Strength                     :Problem solver,Team player,Self motivated.
+CO-CURRICULAR  & EXTRA CURRICULAR ACTIVITIES :<br>
+Member of CSI Communications<br>
+Actively participated in Code marathon(cool-code) event at WITchar17<br>
+Actively participated in Graphity event at WITchar-17<br>
+Actively participated in Web Imagika event at WITchar-18<br>
+Actively participated in treasure hunt competition by ISTE in 2016 and 2017<br>
+
+
+PERSONAL INFORMATION:<br>
+Date of Birth             :10th FEB 1997<br>
+Languages Known    : English, Hindi, Marathi, Kannada<br>
+Nationality                 : Indian<br>
+Strength                     :Problem solver,Team player,Self motivated.<br>
 
 
 
